--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bagira AI - Интеллектуальный ассистент для юридических фирм | Автоматизация работы с клиентами</title>
-  <meta name="description" content="Багира ИИ - революционный помощник для юридических фирм. Автоматическая квалификация клиентов, запись на консультации 24/7, соответствие российскому законодательству.">
+  <title>Bagira AI - Интеллектуальный ассистент для юридических фирм</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="styles.css">
 </head>
@@ -22,9 +21,9 @@
 
   <section class="hero-section">
       <div class="container">
-          <h1 class="main-page-heading">Bagira AI: увеличьте конверсию в клиентов на 300% и освободите время для юридической практики</h1>
-          <p class="main-page-subheading">Наш ИИ-ассистент работает круглосуточно, мгновенно обрабатывает запросы потенциальных клиентов, квалифицирует их по вашим критериям и автоматически записывает на консультации. Соответствует требованиям российского законодательства о персональных данных.</p>
-          <button id="joinPilotBtnHero" class="btn btn-primary" style="background-color: #FFD240; color: var(--primary-darker);">Получить демо за 5 минут</button>
+          <h1 class="main-page-heading">Bagira AI: революционная возможность для вашей юридической фирмы</h1>
+          <p class="main-page-subheading">Наш интеллектуальный ассистент круглосуточно обрабатывает запросы, квалифицирует потенциальных клиентов и назначает консультации, освобождая ваше время для юридической практики.</p>
+          <button id="joinPilotBtnHero" class="btn btn-primary" style="background-color: #FFD240; color: var(--primary-darker);">Присоединиться к пилотной программе</button>
           
           <div class="video-responsive-wrapper">
               <iframe 
@@ -40,23 +39,23 @@
   <main>
     <section class="problems-section">
         <div class="container">
-            <h2 class="section-title">Перестаньте терять клиентов из-за устаревших методов работы</h2>
-            <p class="section-subtitle">Современные клиенты ожидают мгновенного сервиса. Устаревшие подходы к привлечению клиентов стоят вам денег каждый день.</p>
+            <h2 class="section-title">Решите проблемы привлечения клиентов в вашей фирме</h2>
+            <p class="section-subtitle">Традиционные методы привлечения клиентов устарели. Bagira AI решает ключевые болевые точки.</p>
             <div class="info-grid">
                 <div class="info-item">
                     <span class="item-icon"><i class="fas fa-user-clock"></i></span>
-                    <h3>Потеря 70% лидов из-за медленного ответа</h3>
-                    <p>Исследования показывают: клиенты обращаются к конкурентам, если не получают ответ в течение 5 минут. Ваша фирма теряет потенциальных клиентов каждый час.</p>
+                    <h3>Задержки с ответом ведут к потере клиентов</h3>
+                    <p>Потенциальные клиенты ожидают немедленного взаимодействия. Задержки означают, что они уходят к вашим конкурентам.</p>
                 </div>
                 <div class="info-item">
-                    <span class="item-icon"><i class="fas fa-ruble-sign"></i></span>
-                    <h3>Высокая стоимость неквалифицированных лидов</h3>
-                    <p>Тратите время на неподходящих клиентов? Каждая неквалифицированная консультация стоит 5,000-15,000 рублей упущенной прибыли от оплачиваемой работы.</p>
+                    <span class="item-icon"><i class="fas fa-microphone-slash"></i></span>
+                    <h3>Безличный первый контакт не конвертирует</h3>
+                    <p>Голосовая почта и стандартные колл-центры лишены юридического контекста и не могут эффективно выстроить доверие или квалифицировать лидов.</p>
                 </div>
                 <div class="info-item">
-                    <span class="item-icon"><i class="fas fa-clock"></i></span>
-                    <h3>Административная работа отнимает 40% времени</h3>
-                    <p>Юристы тратят до 40% рабочего времени на планирование встреч, первичную консультацию и административные задачи вместо юридической практики.</p>
+                    <span class="item-icon"><i class="fas fa-folder-minus"></i></span>
+                    <h3>Неэффективные процессы истощают ресурсы</h3>
+                    <p>Ручная проверка лидов и планирование встреч отнимают ценное время, которое можно было бы потратить на юридическую работу.</p>
                 </div>
             </div>
         </div>
@@ -64,38 +63,23 @@
 
     <section class="features-section">
         <div class="container">
-            <h2 class="section-title">Получите конкурентное преимущество с Bagira AI</h2>
-            <p class="section-subtitle">Автоматизируйте процесс привлечения клиентов, увеличьте доходы и освободите время для того, что действительно важно - юридической работы.</p>
+            <h2 class="section-title">Расширьте возможности вашей фирмы с Bagira AI</h2>
+            <p class="section-subtitle">Оптимизируйте процесс привлечения клиентов, улучшите скорость ответа и освободите вашу команду для оплачиваемой работы.</p>
             <div class="info-grid">
                 <div class="info-item">
-                    <span class="item-icon"><i class="fas fa-brain"></i></span>
-                    <h3>Умная квалификация по вашим критериям</h3>
-                    <p>ИИ задает правильные вопросы для определения платежеспособности, сложности дела и соответствия вашей специализации. Только качественные лиды попадают в ваш календарь.</p>
+                    <span class="item-icon"><i class="fas fa-comments"></i></span>
+                    <h3>Мгновенная квалификация лидов</h3>
+                    <p>Привлекайте посетителей сайта немедленно, задавайте квалифицирующие вопросы и выявляйте высокопотенциальных лидов 24/7.</p>
                 </div>
                 <div class="info-item">
-                    <span class="item-icon"><i class="fas fa-calendar-alt"></i></span>
+                    <span class="item-icon"><i class="fas fa-calendar-check"></i></span>
                     <h3>Автоматическая запись на консультацию</h3>
-                    <p>Интеграция с вашим календарем. Клиенты записываются сами в удобное время, получают напоминания, подтверждения и всю необходимую информацию для встречи.</p>
+                    <p>Беспрепятственно записывайте квалифицированных лидов на первичные консультации прямо в календарь вашей фирмы согласно вашей доступности.</p>
                 </div>
                 <div class="info-item">
-                    <span class="item-icon"><i class="fas fa-shield-alt"></i></span>
-                    <h3>Соответствие российскому законодательству</h3>
-                    <p>Полное соблюдение ФЗ-152 "О персональных данных", интеграция с российскими сервисами, хранение данных на территории РФ. Никаких проблем с регуляторами.</p>
-                </div>
-                <div class="info-item">
-                    <span class="item-icon"><i class="fas fa-chart-line"></i></span>
-                    <h3>Аналитика и отчетность</h3>
-                    <p>Подробная статистика: количество обращений, конверсия в клиентов, средний чек, эффективность каналов привлечения. Принимайте решения на основе данных.</p>
-                </div>
-                <div class="info-item">
-                    <span class="item-icon"><i class="fas fa-headset"></i></span>
-                    <h3>Поддержка на русском языке</h3>
-                    <p>Техническая поддержка, обучение и консультации на русском языке. Понимаем специфику российского рынка юридических услуг.</p>
-                </div>
-                <div class="info-item">
-                    <span class="item-icon"><i class="fas fa-coins"></i></span>
-                    <h3>ROI от 400% в первые 3 месяца</h3>
-                    <p>Клиенты окупают стоимость системы за первый месяц использования благодаря увеличению количества и качества обращений.</p>
+                    <span class="item-icon"><i class="fas fa-clock"></i></span>
+                    <h3>Никогда не упускайте возможность</h3>
+                    <p>Собирайте лидов и оказывайте первичную поддержку даже в нерабочее время, гарантируя, что ни один потенциальный клиент не будет проигнорирован.</p>
                 </div>
             </div>
         </div>
@@ -103,18 +87,28 @@
 
     <section class="cta-vapi-section">
       <div class="container">
-        <h3>Протестируйте Bagira AI прямо сейчас</h3>
+        <h3>Попробуйте Bagira AI в действии</h3>
         <p>
-          Нажмите на иконку микрофона справа и попробуйте записаться на консультацию. Увидите, как ваши клиенты будут взаимодействовать с системой.
+          Узнайте, как Bagira AI взаимодействует с потенциальными клиентами. Нажмите на иконку микрофона и запишитесь на консультацию.
         </p>
       </div>
     </section>
   </main>
 
+  <!-- Custom VAPI Button -->
+  <div id="customVapiButton" class="custom-vapi-button">
+    <div class="vapi-button-content">
+      <i class="fas fa-microphone"></i>
+      <div class="vapi-button-text">
+        <span class="vapi-title">Поговорить с Bagira AI</span>
+        <span class="vapi-subtitle">Голосовой юр. помощник</span>
+      </div>
+    </div>
+  </div>
+
   <footer class="page-footer">
     <div class="container">
-      <p>© <span id="currentYear"></span> Bagira AI. Все права защищены. | ИП Багира Технологии | ИНН: [номер] | ОГРНИП: [номер]</p>
-      <p>Соответствует требованиям ФЗ-152 "О персональных данных"</p>
+      <p>© <span id="currentYear"></span> Bagira AI. Все права защищены.</p>
     </div>
   </footer>
 
@@ -141,18 +135,18 @@
   <div id="pilotFormModal" class="modal-overlay">
     <div class="modal-content">
         <button id="closePilotModal" class="modal-close-btn" aria-label="Закрыть">×</button>
-        <div class="modal-header-title">Получить демо Bagira AI за 5 минут</div>
+        <div class="modal-header-title">Присоединиться к пилотной программе Bagira AI</div>
         <form id="pilotProgramForm">
             <label for="pilotName">Ваше имя:</label>
             <input type="text" id="pilotName" name="name" required placeholder="например, Иван Иванов">
 
-            <label for="pilotCompanyName">Название юридической фирмы:</label>
+            <label for="pilotCompanyName">Название компании:</label>
             <input type="text" id="pilotCompanyName" name="companyName" required placeholder="например, ООО «Юридические Решения»">
 
             <label for="pilotWebsite">Сайт компании:</label>
             <input type="url" id="pilotWebsite" name="website" required placeholder="https://www.examplelaw.ru">
 
-            <button type="submit" id="submitPilotForm">Получить демо за 5 минут</button>
+            <button type="submit" id="submitPilotForm">Отправить заявку</button>
         </form>
         <div id="pilotFormMessage" class="modal-message"></div>
     </div>
