--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <span class="nav__title">BAGIRA AI</span>
       </div>
       <div class="nav__actions">
-        <button class="btn btn--outline" id="navDemoBtn">Получить демо</button>
+        <button class="btn btn--outline" id="navDemoBtn">Запросить демо</button>
       </div>
     </nav>
   </header>
@@ -29,10 +29,10 @@
     <div class="container">
       <div class="hero__content">
         <h1 class="hero__title">
-          Увеличьте количество клиентов на <span class="text-accent">300%</span> с ИИ-помощником для юристов
+          Bagira AI: революция в привлечении клиентов для вашей юридической фирмы
         </h1>
         <p class="hero__subtitle">
-          Багира ИИ автоматически обрабатывает звонки, квалифицирует потенциальных клиентов и записывает на консультации 24/7. Сэкономьте 15+ часов в неделю и никогда не упускайте выгодных клиентов.
+          Наш интеллектуальный ассистент круглосуточно обрабатывает запросы, квалифицирует потенциальных клиентов и назначает консультации, освобождая ваше время для юридической практики.
         </p>
         
         <div class="hero__stats">
@@ -53,16 +53,12 @@
         <div class="hero__actions">
           <button class="btn btn--primary btn--large" id="heroMainCTA">
             <i class="fas fa-play-circle"></i>
-            Получить демо за 5 минут
-          </button>
-          <button class="btn btn--secondary btn--large" id="heroVideoCTA">
-            <i class="fas fa-video"></i>
-            Посмотреть видео
+            Запросить демо за 2 минуты
           </button>
         </div>
 
         <div class="hero__trust">
-          <span class="trust__text">Соответствует ФЗ-152 • Данные хранятся в РФ • 30 дней бесплатно</span>
+          <span class="trust__text">Соответствует ФЗ-152 • Данные хранятся в РФ</span>
         </div>
       </div>
 
@@ -139,8 +135,8 @@
   <!-- Features -->
   <section class="features">
     <div class="container">
-      <h2 class="section__title center">Полный комплекс для автоматизации работы с клиентами</h2>
-      <p class="section__subtitle center">Все инструменты для эффективного привлечения и обслуживания клиентов в одной системе</p>
+      <h2 class="section__title center">Расширьте возможности вашей фирмы с Bagira AI</h2>
+      <p class="section__subtitle center">Оптимизируйте процесс привлечения клиентов, улучшите скорость ответа и освободите вашу команду для оплачиваемой работы</p>
 
       <div class="features-grid">
         <div class="feature-card">
@@ -235,26 +231,8 @@
       </div>
 
       <div class="cta-demo">
-        <h3 class="cta-demo__title">Попробуйте прямо сейчас</h3>
+        <h3 class="cta-demo__title">Попробуйте Bagira AI в действии</h3>
         <p class="cta-demo__text">Нажмите на кнопку справа внизу и протестируйте систему</p>
-      </div>
-    </div>
-  </section>
-
-  <!-- Pricing hint -->
-  <section class="pricing-hint">
-    <div class="container">
-      <div class="pricing-card">
-        <h2 class="pricing__title">Начните с 14,900 ₽/месяц</h2>
-        <p class="pricing__subtitle">Окупается за первую неделю использования</p>
-        <ul class="pricing__features">
-          <li><i class="fas fa-check"></i> Безлимитные звонки</li>
-          <li><i class="fas fa-check"></i> Интеграция с календарем</li>
-          <li><i class="fas fa-check"></i> Настройка под вашу фирму</li>
-          <li><i class="fas fa-check"></i> Поддержка 24/7</li>
-          <li><i class="fas fa-check"></i> 30 дней бесплатно</li>
-        </ul>
-        <button class="btn btn--primary btn--large" id="pricingCTA">Начать бесплатный период</button>
       </div>
     </div>
   </section>
@@ -263,14 +241,14 @@
   <section class="final-cta">
     <div class="container">
       <h2 class="final-cta__title">Присоединяйтесь к юридическим фирмам будущего</h2>
-      <p class="final-cta__text">Более 100 российских юридических фирм уже используют Багира ИИ для привлечения клиентов</p>
+      <p class="final-cta__text">Более 100 российских юридических фирм уже используют Bagira AI для привлечения клиентов</p>
       <button class="btn btn--primary btn--large" id="finalCTA">
         <i class="fas fa-rocket"></i>
-        Получить демо за 5 минут
+        Запросить демо за 2 минуты
       </button>
       <div class="final-cta__guarantee">
         <i class="fas fa-shield-alt"></i>
-        30 дней бесплатно • Отмена в любой момент • Гарантия возврата средств
+        Отмена в любой момент • Гарантия возврата средств
       </div>
     </div>
   </section>
