--- a/index.html
+++ b/index.html
@@ -264,6 +264,17 @@
     </div>
   </div>
 
+  <!-- Custom Chat Button -->
+  <div id="customChatButton" class="vapi-chat-button">
+    <div class="vapi-chat-button__content">
+      <i class="fas fa-comments vapi-chat-button__icon"></i>
+      <div class="vapi-chat-button__text">
+        <span class="vapi-chat-button__title">Написать Bagira AI</span>
+        <span class="vapi-chat-button__subtitle">Текстовый чат</span>
+      </div>
+    </div>
+  </div>
+
   <!-- Footer -->
   <footer class="footer">
     <div class="container">
