--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <header class="header">
     <nav class="nav container">
       <div class="nav__brand">
-        <span class="nav__logo">🐾</span>
+        <img src="assets/images/bagira-logo.png" alt="Bagira AI Logo" class="nav__logo-img">
         <span class="nav__title">BAGIRA AI</span>
       </div>
       <div class="nav__actions">
