--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
   <header class="header">
     <nav class="nav container">
       <div class="nav__brand">
-        <img src="assets/images/bagira-logo.png" alt="Bagira AI Logo" class="nav__logo-img">
+        <span class="nav__logo">🐾</span>
         <span class="nav__title">BAGIRA AI</span>
       </div>
       <div class="nav__actions">
         <button class="btn btn--outline" id="navDemoBtn">Запросить демо</button>
-      </div>
+    </div>
     </nav>
   </header>
 
   <!-- Hero Section -->
   <section class="hero">
-    <div class="container">
+      <div class="container">
       <div class="hero__content">
         <h1 class="hero__title">
           Bagira AI: революция в привлечении клиентов для вашей юридической фирмы
@@ -64,20 +64,20 @@
 
       <div class="hero__media">
         <div class="video-container">
-          <iframe 
-            src="https://www.youtube.com/embed/U-Ko2DSn3q4?autoplay=0&rel=0" 
+              <iframe 
+                  src="https://www.youtube.com/embed/U-Ko2DSn3q4?autoplay=0&rel=0" 
             title="Демо Bagira AI"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-            allowfullscreen>
-          </iframe>
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                  allowfullscreen>
+              </iframe>
         </div>
+          </div>
       </div>
-    </div>
   </section>
 
   <!-- Problems & Solutions -->
   <section class="problems-solutions">
-    <div class="container">
+        <div class="container">
       <h2 class="section__title center">Перестаньте терять клиентов из-за устаревших методов</h2>
       
       <div class="problem-solution-grid">
@@ -119,22 +119,22 @@
           </div>
           <h3 class="card__title">Административная работа</h3>
           <p class="card__text">40% времени уходит на планирование встреч вместо юридической работы</p>
-        </div>
+                </div>
         
         <div class="solution-card">
           <div class="card__icon card__icon--solution">
             <i class="fas fa-calendar-check"></i>
-          </div>
+                </div>
           <h3 class="card__title">Автозапись в календарь</h3>
           <p class="card__text">Клиенты сами записываются, получают напоминания и подтверждения</p>
+                </div>
+            </div>
         </div>
-      </div>
-    </div>
-  </section>
+    </section>
 
   <!-- Features -->
   <section class="features">
-    <div class="container">
+        <div class="container">
       <h2 class="section__title center">Расширьте возможности вашей фирмы с Bagira AI</h2>
       <p class="section__subtitle center">Оптимизируйте процесс привлечения клиентов, улучшите скорость ответа и освободите вашу команду для оплачиваемой работы</p>
 
@@ -177,18 +177,18 @@
           </div>
           <h3 class="feature__title">Аналитика и отчеты</h3>
           <p class="feature__text">Детальная статистика конверсии, источников клиентов и эффективности</p>
-        </div>
+                </div>
 
         <div class="feature-card">
           <div class="feature__icon">
             <i class="fas fa-headset"></i>
-          </div>
+                </div>
           <h3 class="feature__title">Поддержка на русском</h3>
           <p class="feature__text">Техническая поддержка, обучение команды и настройка под ваши процессы</p>
+                </div>
+            </div>
         </div>
-      </div>
-    </div>
-  </section>
+    </section>
 
   <!-- How it works -->
   <section class="how-it-works">
@@ -250,8 +250,8 @@
         <i class="fas fa-shield-alt"></i>
         Отмена в любой момент • Гарантия возврата средств
       </div>
-    </div>
-  </section>
+      </div>
+    </section>
 
   <!-- Custom VAPI Button -->
   <div id="customVapiButton" class="vapi-button">
@@ -329,7 +329,7 @@
         <div class="form__group">
           <label for="demoPhone" class="form__label">Телефон</label>
           <input type="tel" id="demoPhone" class="form__input" required placeholder="+7 (XXX) XXX-XX-XX">
-        </div>
+      </div>
 
         <div class="form__group">
           <label for="demoEmail" class="form__label">Email</label>
@@ -363,7 +363,7 @@
         <button type="submit" class="btn btn--primary btn--full">
           Подтвердить запись
         </button>
-      </form>
+        </form>
     </div>
   </div>
 
