--- a/index.html
+++ b/index.html
@@ -275,6 +275,9 @@
     </div>
   </div>
 
+  <!-- VAPI Text Widget Container -->
+  <div id="bagira-widget" style="position: fixed; bottom: 24px; right: 24px; z-index: 9999;"></div>
+
   <!-- Footer -->
   <footer class="footer">
     <div class="container">
@@ -335,7 +338,7 @@
           <label for="demoEmail" class="form__label">Email</label>
           <input type="email" id="demoEmail" class="form__input" required placeholder="you@lawfirm.ru">
         </div>
-
+        
         <button type="submit" class="btn btn--primary btn--full" id="submitDemo">
           Получить демо
         </button>
@@ -368,5 +371,6 @@
   </div>
 
   <script src="script.js"></script>
+  <script src="https://cdn.vapi.ai/sdk/vapi-0.1.16.umd.min.js"></script>
 </body>
 </html>
